Add label to swap, refund actions
